# starting-ragchatbot-codebase

./: .env.example  .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  simple_vector_store.py  vector_store_fixed.py
backend/simple_vector_store/: chunks.json
backend/test_basic_chroma/: chroma.sqlite3
backend/test_chroma_db/: chroma.sqlite3
backend/test_chroma_fixed/: chroma.sqlite3
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh  format_code.py  quality_check.py
